tests/src/frontend/typechecking/invalid/nullable_1.sk
fun getDoubleBox(): Nullable<Nullable<Int>> {
  Box(Box(42))
}
